Implement display and refresh of retrieved messages.

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -82,3 +82,10 @@ form input[type=text] {
 .spinner img {
     padding: 10px;
 }
+
+div {
+    background-color: gray;
+    margin: 5px;
+    height: 25px;
+    width: 450px;
+}
